GW.07 0. Added token on environment file 1. We add url on environment file too. 2. Url and authorization data is loaded from env file on service

--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+.env.*
 .venv
 env/
 venv/
@@ -131,8 +131,8 @@ dmypy.json
 server/dist-server/
 
 .idea/
-
-server/node_modules/
+node_modules/*
+server/node_modules/*
 server/.idea/
-front/node_modules/
+front/node_modules/*
 front/.idea/
